--- a/web1.html
+++ b/web1.html
@@ -30,7 +30,7 @@
 			<ol>
 				<li>Trung học phổ thông Trần phú</li>
 				<li>Đại học Lê Quý Đôn</li>
-				<li>Viện KHCNQS</li>
+				<li>Viện KHCN-QS</li>
 			</ol>
 			<h2 id="score">Score</h2>
 			<dl id="right_side">
