--- a/web1.html
+++ b/web1.html
@@ -7,7 +7,7 @@
 	<meta name="country" content="Viet nam"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<title>Phuong is Resume</title>
-	<link rel="stylesheet" href="css/acess.css">
+	<link rel="stylesheet" href="Acess/acess.css">
 </head>
 <body>
 	<h1 id="menu_text">My Resume</h1>
