--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8"/>
-	<meta name="descreption" content="My resume website"/>
+	<meta name="descreption" content="Lap trinh co ban website"/>
 	<meta name="author" content="Huu phuong"/>
 	<meta name="country" content="Viet nam"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
