--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="author" content="Huu phuong"/>
 	<meta name="country" content="Viet nam"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<title>Phuong is Resume</title>
+	<title>Lap trinh co ban</title>
 	<link rel="stylesheet" href="css/acess.css">
 </head>
 <body>
