--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/acess.css">
 </head>
 <body>
-	<h1 id="menu_text">My Resume</h1>
+	<h1 id="menu_text">Lập trình cơ bản cho người mới bắt đầu</h1>
 	<nav>
 		<a href="#contact" class="menu_left">Contact</a>		
 		<a href="#education" class="menu_left">Education</a>
